# essential_sqlalchemy

./: .cruft.json  .env.test  .pre-commit-config.yaml  LICENCE  README.md  cookie_shop.db  cookie_shop_test.db  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api_docs.md
essential_sqlalchemy/: __main__.py  config.py
essential_sqlalchemy/crud/: __init__.py  cookies_crud.py  line_items_crud.py  orders_crud.py  users_crud.py
essential_sqlalchemy/db/: create_tables.py  engine.py
essential_sqlalchemy/models/: cookie.py  customer_order.py  line_items.py  order.py  user.py
essential_sqlalchemy/schemas/: __init__.py  cookies.py  line_items.py  orders.py  users.py
tests/: conftest.py
tests/crud/: test_cookies_crud.py  test_line_items_crud.py  test_orders_crud.py
